--- a/BC_agriculture_regions.ipynb
+++ b/BC_agriculture_regions.ipynb
@@ -537,7 +537,7 @@
    ],
    "source": [
     "#Get Canadas agricultural regions Boundary file (as shape file)\n",
-    "car = gpd.read_file(\"lcar000a16a_e.shp\")\n",
+    "car = gpd.read_file(\"data/lcar000a16a_e.shp\")\n",
     "car"
    ]
   },
